--- a/PartyPalApp/MVVM/Views/EventHomePage.xaml
+++ b/PartyPalApp/MVVM/Views/EventHomePage.xaml
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="utf-8" ?>
 <ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-             x:Class="PartyPalApp.EventHomePage">
+             x:Class="PartyPalApp.EventHomePage"
+             BackgroundImageSource="background.png">
 
     <Grid
          RowDefinitions=".05*,.08*,.45*,.05*,.05*,.3*">
