--- a/PartyPalApp/EventPage.xaml
+++ b/PartyPalApp/EventPage.xaml
@@ -1,8 +1,7 @@
-﻿<?xml version="1.0" encoding="utf-8" ?>
+<?xml version="1.0" encoding="utf-8" ?>
 <ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-             x:Class="PartyPalApp.MainPage"
-             Title="Event Page">
-
+             x:Class="PartyPalApp.EventPage"
+             Title="EventPage">
 
 </ContentPage>
