--- a/PartyPalApp/MVVM/Views/SettingsPage.xaml
+++ b/PartyPalApp/MVVM/Views/SettingsPage.xaml
@@ -7,20 +7,20 @@
 
     <StackLayout>
 
-       
-
         <Frame BackgroundColor="White" 
                CornerRadius="10" 
                Padding="10" 
-               WidthRequest="370"
-               Margin="0,20,0,30">
+               WidthRequest="350"
+               Margin="0,20,0,20">
             <StackLayout>
-                <Label Text="Over PartyPal"
+                <Label x:Name="AboutTitleLabel"
+                    Text="Over PartyPal"
                        FontSize="Title"
                        FontAttributes="Bold"
                        HorizontalOptions="Center"
                        Margin="0,0,0,10"/>
-                <Label Text="Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce eget sapien eu lectus dapibus dignissim nec in odio. Quisque facilisis sagittis purus vel eleifend. Sed id sollicitudin lectus."
+                <Label x:Name="AboutDescriptionLabel"
+                    Text="Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce eget sapien eu lectus dapibus dignissim nec in odio. Quisque facilisis sagittis purus vel eleifend. Sed id sollicitudin lectus."
                        FontSize="Medium"
                        HorizontalOptions="Center"
                        Margin="0,0,0,10"/>
@@ -30,29 +30,33 @@
         <Frame BackgroundColor="White" 
                CornerRadius="10" 
                Padding="10" 
-               WidthRequest="370"
+               WidthRequest="350"
                HeightRequest="285"
-               Margin="0,20,0,10">
+               Margin="0,20,0,20">
             <StackLayout>
-                <Button Text="Privacy en Beveiliging"
+                <Button x:Name="PrivacyAndSecurityButton"
+                    Text="Privacy en Beveiliging"
                         FontSize="Medium"
                         BackgroundColor="Red"
                         TextColor="White"
                         FontAttributes="Bold"
                         Margin="0,10,0,20"/>
-                <Button Text="Uiterlijk van de App"
+                <Button x:Name="AppearanceButton"
+                    Text="Uiterlijk van de App"
                         FontSize="Medium"
                         BackgroundColor="Red"
                         TextColor="White"
                         FontAttributes="Bold"
                         Margin="0,0,0,20"/>
-                <Button Text="Probleem aangeven"
+                <Button x:Name="ProblemButton"
+                    Text="Probleem aangeven"
                         FontSize="Medium"
                         BackgroundColor="Red"
                         TextColor="White"
                         FontAttributes="Bold"
                         Margin="0,0,0,20"/>
-                <Button Text="Feedback geven"
+                <Button x:Name="FeedbackButton"
+                    Text="Feedback geven"
                         FontSize="Medium"
                         BackgroundColor="Red"
                         TextColor="White"
