--- a/PartyPalApp/MVVM/Views/EventHomePage.xaml
+++ b/PartyPalApp/MVVM/Views/EventHomePage.xaml
@@ -7,11 +7,12 @@
     <Grid
          RowDefinitions=".05*,.08*,.45*,.05*,.05*,.3*">
         <Label
-            FontSize="16"
+            FontSize="Body"
             HorizontalOptions="Center"
             Text="Evenementen"
             TextColor="Black"
-            VerticalOptions="Center"/>
+            Margin="0,10,0,0"
+            FontAttributes="Bold"/>
         <Grid Grid.Row="1" Margin="25,10,25,10">
             <RoundRectangle
                 CornerRadius="25"
