--- a/PartyPalApp/MVVM/Views/MapPage.xaml
+++ b/PartyPalApp/MVVM/Views/MapPage.xaml
@@ -4,11 +4,40 @@
              x:Class="PartyPalApp.MapPage"
              Title="MapPage"
              BackgroundImageSource="background.png">
-    
-    <VerticalStackLayout>
-        <Label 
-            Text="Welcome to .NET MAUI!"
-            VerticalOptions="Center" 
-            HorizontalOptions="Center" />
-    </VerticalStackLayout>
+
+    <StackLayout>
+        <Label x:Name="MapLabel"
+            HorizontalOptions="Center"
+            Text="Plattegrond"
+            Margin="0,10,0,0"
+            FontSize="Body"
+            FontAttributes="Bold"/>
+        <Label x:Name="InstructionLabel"
+               HorizontalOptions="Center"
+               Text="Druk op uw bestemming"
+               Margin="0,5,0,0"
+               FontSize="26"
+               FontAttributes="Bold"/>
+        <Frame BorderColor="Black"
+               Margin="10,10,10,0">
+            <Image Source="layout.png">
+                <Image.GestureRecognizers>
+                    <PinchGestureRecognizer PinchUpdated="OnPinchUpdated" />
+                </Image.GestureRecognizers>
+            </Image>
+        </Frame>
+        <Frame
+            BorderColor="Black"
+            Margin="10,10,10,0">
+            <StackLayout>
+                <Label
+                    Text="Legenda"
+                    Margin="0,0,0,10"
+                    FontAttributes="Bold"/>
+                <Image
+                    Source="legenda.png">
+                </Image>
+            </StackLayout>
+        </Frame>
+    </StackLayout>
 </ContentPage>
