--- a/PartyPalApp/MVVM/Views/MapPage.xaml
+++ b/PartyPalApp/MVVM/Views/MapPage.xaml
@@ -19,7 +19,7 @@
                FontSize="26"
                FontAttributes="Bold"/>
         <Frame BorderColor="Black"
-               Margin="10,10,10,0">
+               Margin="30,20,30,0">
             <Image Source="layout.png">
                 <Image.GestureRecognizers>
                     <PinchGestureRecognizer PinchUpdated="OnPinchUpdated" />
@@ -28,16 +28,24 @@
         </Frame>
         <Frame
             BorderColor="Black"
-            Margin="10,10,10,0">
+            Margin="30,5,30,0">
             <StackLayout>
                 <Label
                     Text="Legenda"
                     Margin="0,0,0,10"
                     FontAttributes="Bold"/>
                 <Image
-                    Source="legenda.png">
+                    Margin="0,-10,0,-20"
+                    Source="legenda1.png"
+                    HeightRequest="120"
+                    WidthRequest="500">
                 </Image>
             </StackLayout>
         </Frame>
+        
+        <Button 
+            Text="Bereken Vluchtroute"
+            Margin="70,40,70,0"
+            BackgroundColor="Red"/>
     </StackLayout>
 </ContentPage>
