--- a/PartyPalApp/MVVM/Views/EventOverviewPage.xaml
+++ b/PartyPalApp/MVVM/Views/EventOverviewPage.xaml
@@ -3,10 +3,86 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="PartyPalApp.EventOverviewPage"
              Title="EventOverviewPage">
-    <VerticalStackLayout>
-        <Label 
-            Text="Welcome to .NET MAUI!"
-            VerticalOptions="Center" 
-            HorizontalOptions="Center" />
-    </VerticalStackLayout>
+
+    <ScrollView>
+        <StackLayout Margin="10">
+            <Label Text="Minor MD" TextColor="Black" Margin="0,10,0,40" FontSize="36" FontAttributes="Bold" HorizontalOptions="CenterAndExpand"></Label>
+            <Grid RowSpacing="10">
+                <!-- Rijen en kolommen -->
+                <Grid.RowDefinitions>
+                    <RowDefinition Height="100"/>
+                    <RowDefinition Height="Auto"/>
+                </Grid.RowDefinitions>
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition Width="Auto"/>
+                    <ColumnDefinition Width="*"/>
+                </Grid.ColumnDefinitions>
+
+                <!-- Eerste kolom met een afbeelding -->
+                <Frame HeightRequest="100" WidthRequest="100" VerticalOptions="Start">
+                    <Image Source="kamal.jpeg" Grid.Row="0" Grid.Column="0" HeightRequest="100" WidthRequest="100" Aspect="AspectFit"/>
+                </Frame>
+
+                <!-- Tweede kolom met een label -->
+                <Label Text="Dit event staat in het teken van de afstuurprojecten. Bekijk tijdens dit event de gevarieerde opdrachten van onze studenten!" 
+                   Grid.Row="0" Grid.Column="1" Margin="20,0,0,0" VerticalOptions="Start" HorizontalOptions="Start" HeightRequest="150" WidthRequest="180" BackgroundColor="White" TextColor="Black"/>
+
+                <Label Text="Mario Gonzalez" FontAttributes="Bold"
+                   Grid.Row="1" VerticalOptions="Start" TextColor="Black"/>
+            </Grid>
+
+            <Frame HeightRequest="200" WidthRequest="340" BorderColor="Red" Margin="0,40,0,0">
+                <Image Source="zuyd.png" HeightRequest="150" WidthRequest="200" Aspect="AspectFit" Margin="10,0,0,0"></Image>
+            </Frame>
+
+            <Grid Margin="10">
+                <Grid.RowDefinitions>
+                    <RowDefinition Height="25"/>
+                    <RowDefinition Height="75"/>
+                </Grid.RowDefinitions>
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition Width="Auto"/>
+                    <ColumnDefinition Width="Auto"/>
+                </Grid.ColumnDefinitions>
+
+                <Label Text="Drukte:" Grid.Row="0" Grid.Column="0" HeightRequest="100" WidthRequest="50" HorizontalOptions="Start" VerticalOptions="Start" BackgroundColor="White" TextColor="Black" FontAttributes="Bold"></Label>
+                <Label Text="Tijd:" Grid.Row="0" Grid.Column="1" HeightRequest="100" WidthRequest="50" HorizontalOptions="Start" VerticalOptions="Start" BackgroundColor="White" TextColor="Black" FontAttributes="Bold"></Label>
+                <Label Text="Maximaal 80 personen" Grid.Row="1" Grid.Column="0" HeightRequest="100" WidthRequest="200" HorizontalOptions="Start" VerticalOptions="Start" BackgroundColor="White" TextColor="Black"></Label>
+                <Label Text="12:00 - 13:00 uur" Grid.Row="1" Grid.Column="1" HeightRequest="100" WidthRequest="150" HorizontalOptions="Start" VerticalOptions="Start" BackgroundColor="White" TextColor="Black"></Label>
+            </Grid>
+
+            <Label Text="Recensies" TextColor="Black" FontSize="24" FontAttributes="Bold" HorizontalOptions="Center"></Label>
+
+            <VerticalStackLayout>
+                <Frame BorderColor="Red" BackgroundColor="White" Margin="0,20,0,10">
+                    <StackLayout>
+                        <Label Text="Jo Bonten" TextColor="Black" FontAttributes="Bold"></Label>
+                        <Label Text="Wat een fantastisch event!" TextColor="Black"></Label>
+                    </StackLayout>
+                </Frame>
+
+                <Frame BorderColor="Red" BackgroundColor="White" Margin="0,0,0,10">
+                    <StackLayout>
+                        <Label Text="Bon Boclat" TextColor="Black" FontAttributes="Bold"></Label>
+                        <Label Text="Dit event was erg leerzaam!" TextColor="Black"></Label>
+                    </StackLayout>
+                </Frame>
+
+                <Frame BorderColor="Red" BackgroundColor="White" Margin="0,0,0,10">
+                    <StackLayout>
+                        <Label Text="Sjors Peters" TextColor="Black" FontAttributes="Bold"></Label>
+                        <Label Text="De catering was goed verzorgd!" TextColor="Black"></Label>
+                    </StackLayout>
+                </Frame>
+
+                <Frame BorderColor="Red" BackgroundColor="White" Margin="0,0,0,10">
+                    <StackLayout>
+                        <Label Text="Henk Veerman" TextColor="Black" FontAttributes="Bold"></Label>
+                        <Label Text="Als voetballer maak ik veel goals, het bezoeken van dit event was daar een van!" TextColor="Black"></Label>
+                    </StackLayout>
+                </Frame>
+            </VerticalStackLayout>
+        </StackLayout>
+    </ScrollView>
+    
 </ContentPage>
