--- a/PartyPalApp/App.xaml
+++ b/PartyPalApp/App.xaml
@@ -1,10 +1,18 @@
-﻿<?xml version = "1.0" encoding = "UTF-8" ?>
+﻿<?xml version="1.0" encoding="utf-8" ?>
 <Application xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              xmlns:local="clr-namespace:PartyPalApp"
              x:Class="PartyPalApp.App">
     <Application.Resources>
         <ResourceDictionary>
+            
+            <!-- Style for NavigationPage -->
+            <Style TargetType="NavigationPage">
+                <Setter Property="BarBackgroundColor" Value="Red" />
+                <Setter Property="BarTextColor" Value="White" />
+            </Style>
+
+            
             <ResourceDictionary.MergedDictionaries>
                 <ResourceDictionary Source="Resources/Styles/Colors.xaml" />
                 <ResourceDictionary Source="Resources/Styles/Styles.xaml" />
