--- a/PartyPalApp/MVVM/Views/MapPage.xaml
+++ b/PartyPalApp/MVVM/Views/MapPage.xaml
@@ -2,7 +2,7 @@
 <ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="PartyPalApp.MapPage"
-             Title="MapPage"
+             Title="Plattegrond"
              BackgroundImageSource="background.png">
 
     <StackLayout>
