--- a/PartyPalApp/MVVM/Views/SettingsPage.xaml
+++ b/PartyPalApp/MVVM/Views/SettingsPage.xaml
@@ -65,5 +65,23 @@
             </StackLayout>
         </Frame>
 
+        <Frame
+            BackgroundColor="White" 
+            CornerRadius="10" 
+            Padding="10" 
+            Margin="20,20,20,20">
+            <StackLayout>
+                <Button 
+                    x:Name="AdminButton"
+                    Text="Admin Functies"
+                    FontSize="Medium"
+                    BackgroundColor="Red"
+                    TextColor="White"
+                    FontAttributes="Bold"
+                    Margin="0,10,0,20"
+                    Clicked="AdminButton_Clicked"/>
+            </StackLayout>
+        </Frame>
+
     </StackLayout>
 </ContentPage>
