--- a/PartyPalApp/MVVM/Views/QrPage.xaml
+++ b/PartyPalApp/MVVM/Views/QrPage.xaml
@@ -1,12 +1,20 @@
 <?xml version="1.0" encoding="utf-8" ?>
 <ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
+             xmlns:zxing="clr-namespace:ZXing.Net.Maui.Controls;assembly=ZXing.Net.MAUI.Controls"
              x:Class="PartyPalApp.QrPage"
              Title="QrPage">
-    <VerticalStackLayout>
-        <Label 
-            Text="Welcome to .NET MAUI!"
-            VerticalOptions="Center" 
-            HorizontalOptions="Center" />
-    </VerticalStackLayout>
+
+    <StackLayout x:Name="MainStackLayout">
+        <zxing:CameraBarcodeReaderView
+            x:Name="BarcodeReader"
+            BarcodesDetected="BarcodeReader_BarcodesDetected"
+            Margin="40"/>
+        <Frame x:Name="Frame1" Margin="10,0,10,0" IsVisible="False">
+            <Label Text="Hallo 1"/>
+        </Frame>
+        <Frame x:Name="Frame2" Margin="10" IsVisible="False">
+            <Label Text="Hallo 2"/>
+        </Frame>
+    </StackLayout>
 </ContentPage>
