--- a/PartyPalApp/MVVM/Views/QrPage.xaml
+++ b/PartyPalApp/MVVM/Views/QrPage.xaml
@@ -2,11 +2,145 @@
 <ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="PartyPalApp.QrPage"
-             Title="QrPage">
-    <VerticalStackLayout>
-        <Label 
-            Text="Welcome to .NET MAUI!"
-            VerticalOptions="Center" 
-            HorizontalOptions="Center" />
-    </VerticalStackLayout>
+             xmlns:zxing="clr-namespace:ZXing.Net.Maui.Controls;assembly=ZXing.Net.MAUI.Controls">
+
+    <StackLayout>
+        <zxing:CameraBarcodeReaderView x:Name="barcodeReader"
+            BarcodesDetected="barcodeReader_BarcodesDetected"
+            HeightRequest="100"
+            WidthRequest="200"
+            VerticalOptions="Start"
+            Margin="0,90,0,120"/>
+
+        <!-- Show barcode 1(hidden at first) -->
+        <Grid x:Name="Hiddengrid"
+              IsVisible="false">
+            <Border
+                Grid.RowSpan="3"
+                BackgroundColor="Red"
+                HeightRequest="250"
+                Stroke="Black"
+                StrokeShape="RoundRectangle 30,30,30,30"
+                WidthRequest="300">
+                <Grid RowDefinitions=".2*,.6*,.2*">
+                
+                    <RoundRectangle
+                        Grid.RowSpan="3"
+                        CornerRadius="30"
+                        HeightRequest="300"
+                        WidthRequest="300"
+                        Opacity=".7">
+                            <RoundRectangle.Fill>
+                                <LinearGradientBrush EndPoint="0,1">
+                                    <GradientStop Offset="0" Color="#030005"></GradientStop>
+                              
+                                    <GradientStop Offset="0.3" Color="#030005"></GradientStop>
+                                 
+                                    <GradientStop Offset="1" Color="Transparent"></GradientStop>
+                                    
+                                </LinearGradientBrush>
+                            </RoundRectangle.Fill>
+                        </RoundRectangle>
+
+                        <VerticalStackLayout 
+                            Spacing="20" 
+                            Grid.Row="1"
+                            HorizontalOptions="Center"
+                            VerticalOptions="Center">
+                        <Label
+                        x:Name="titleLabel"
+                        Text="ZieDit 2024"
+                        FontSize="30"
+                        FontAttributes="Bold"
+                        TextColor="White"
+                        VerticalOptions="Center"
+                        HorizontalOptions="Center"> 
+                        </Label>
+                        <Label 
+                        x:Name="datelabel"
+                        Text="15-07-2024"
+                        FontSize="25"
+                        TextColor="White"
+                        VerticalOptions="Center"
+                        HorizontalOptions="Center">
+                        </Label>
+                        </VerticalStackLayout>
+                </Grid>
+                <Border.Shadow>
+                    <Shadow
+                    Brush="Black"
+                    Opacity=".7"
+                    Radius="50"
+                    Offset="0,0"/>
+                </Border.Shadow>
+            </Border>
+        </Grid>
+
+        <!-- Show barcode 2(hidden at first) -->
+        <Grid x:Name="Hiddengrid2"
+            IsVisible="false">
+            <Border
+            Grid.RowSpan="3"
+            BackgroundColor="Green"
+            HeightRequest="250"
+            Stroke="Black"
+            StrokeShape="RoundRectangle 30,30,30,30"
+            WidthRequest="300"> 
+                <Grid RowDefinitions=".2*,.6*,.2*">
+
+                    <RoundRectangle
+                    Grid.RowSpan="3"
+                    CornerRadius="30"
+                    HeightRequest="300"
+                    WidthRequest="300"
+                    Opacity=".7">
+                        <RoundRectangle.Fill>
+                            <LinearGradientBrush EndPoint="0,1">
+                                
+                                <GradientStop Offset="0" Color="#030005"></GradientStop>
+
+                                <GradientStop Offset="0.3" Color="#030005"></GradientStop>
+
+                                <GradientStop Offset="1" Color="Transparent"></GradientStop>
+
+                            </LinearGradientBrush>
+                        </RoundRectangle.Fill>
+                    </RoundRectangle>
+
+                    <VerticalStackLayout 
+                    Spacing="20" 
+                    Grid.Row="1"
+                    HorizontalOptions="Center"
+                    VerticalOptions="Center">
+                        <Label x:Name="titleLabel2"
+                        Text="ZieDit 2025"
+                        FontSize="30"
+                        FontAttributes="Bold"
+                        TextColor="White"
+                        VerticalOptions="Center"
+                        HorizontalOptions="Center">
+                        </Label>
+                        <Label 
+                        x:Name="datelabel2"
+                        Text="01-01-2025"
+                        FontSize="25"
+                        TextColor="White"
+                        VerticalOptions="Center"
+                        HorizontalOptions="Center">
+                        </Label>
+                    </VerticalStackLayout>
+                </Grid>
+                <Border.Shadow>
+                    <Shadow
+                    Brush="Black"
+                    Opacity=".7"
+                    Radius="50"
+                    Offset="0,0"/>
+                </Border.Shadow>
+            </Border>
+        </Grid>
+
+
+    </StackLayout>
+
 </ContentPage>
